k8s/base/services/media/qbittorrent/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  namespace: media
spec:
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - homeserver-2
      securityContext:
        sysctls:
          - name: net.ipv4.conf.all.src_valid_mark
            value: "1"
          - name: net.ipv4.conf.default.src_valid_mark
            value: "1"
      containers:
        - name: qbittorrent
          image: binhex/arch-qbittorrentvpn:latest
          securityContext:
            privileged: true
            capabilities:
              add:
                - NET_ADMIN
                - NET_RAW
          ports:
            - containerPort: 8080
              name: webui
            - containerPort: 8118
              name: privoxy
            - containerPort: 9118
              name: socks
            - containerPort: 58946
              name: torrent-tcp
              protocol: TCP
            - containerPort: 58946
              name: torrent-udp
              protocol: UDP
          volumeMounts:
            - name: data
              mountPath: /downloads
            - name: config
              mountPath: /config
            # - name: wg-config
            #   mountPath: /config/wireguard
            - name: openvpn-config
              mountPath: /config/openvpn
            - name: localtime
              mountPath: /etc/localtime
              readOnly: true
            - name: modules
              mountPath: /lib/modules
              readOnly: true
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: media-data
        - name: config
          persistentVolumeClaim:
            claimName: qbittorrent-config
        - name: modules
          hostPath:
            path: /lib/modules
            type: Directory
        # - name: wireguard-secret
        #   secret:
        #     secretName: qbittorrent
        #     defaultMode: 0600
        #     items:
        #       - key: wg0.conf
        #         path: wg0.conf
        - name: openvpn-secret
          secret:
            secretName: qbittorrent
            defaultMode: 0600
            items:
              - key: openvpn.ovpn
                path: openvpn.ovpn
        - name: wg-config
          emptyDir: {}
        - name: openvpn-config
          emptyDir: {}
        - name: localtime
          hostPath:
            path: /etc/localtime
            type: File
      restartPolicy: Always
