k8s/base/services/media/qbittorrent/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: qbittorrent
  namespace: media
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`qbittorrent.lffl.internal`)
      kind: Rule
      services:
        - name: qbittorrent
          port: 8080
      middlewares:
        - name: keycloak-forward-auth
          namespace: forward-auth
